# C-MAPSS-turbofan

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
data/cmapss/: README.md
docker/: mlflow.Dockerfile
migrations/: env.py
migrations/versions/: 5d70d7c75074_create_predictions_drift_reports.py  90efe718533c_create_predictions_served.py  e3e436e8bb0c_create_features_engine_window.py  f3e7be5076bd_create_raw_sensor_readings.py
pdm/: __init__.py  config.py  db.py  logging.py  predict.py  schemas.py  storage.py
pdm/apis/: ingestion_api.py  prediction_api.py
pdm/features/: __init__.py  rul.py  windows.py
pdm/flows/: _serve.py  monitoring_flow.py  training_flow.py
pdm/models/: evaluate.py  registry.py  train.py
pdm/monitoring/: __init__.py  drift.py
pdm/orm/: __init__.py  features.py  predictions.py  raw_sensor.py
pdm/simulator/: run.py
pdm/templates/: evaluate.html  metrics.html
scripts/postgres-init/: 00-hba-md5.sh  01-create-test-db.sql  03-create-prefect-db.sql
tests/: conftest.py
tests/integration/: test_alembic.py  test_evaluate.py  test_ingestion_api.py  test_metrics_page.py  test_monitoring_flow.py  test_prediction_api.py  test_simulator.py  test_training_flow.py
tests/unit/: test_config.py  test_db.py  test_drift.py  test_evaluate.py  test_features_rul.py  test_features_windows.py  test_logging.py  test_predict.py  test_promote.py  test_schemas.py  test_schemas_predict.py  test_simulator.py
