[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdm"
version = "0.1.0"
description = "Predictive Maintenance ML Pipeline (NASA C-MAPSS, RUL regression)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "habib", email = "habibalfauzan1@gmail.com" }]

dependencies = [
  # Web / API
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.30,<0.35",
  "httpx>=0.27,<0.29",                # used by simulator + tests

  # Validation / config
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",

  # DB
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.13,<2",

  # Object storage (MinIO via S3-compatible client)
  "boto3>=1.34,<2",
  "s3fs>=2024.6,<2026",
  "pyarrow>=16,<22",

  # ML
  "xgboost>=2.1,<3",
  "scikit-learn>=1.5,<2",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",

  # Orchestration
  "prefect>=3.0,<4",

  # Experiment tracking + model registry
  "mlflow>=2.16,<3",

  # Logging
  "structlog>=24.1,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "ipython>=8.26,<10",
]

[tool.setuptools.packages.find]
include = ["pdm*"]
exclude = ["tests*", "migrations*", "scripts*", "data*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: requires running docker compose stack (postgres, minio)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
